<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activities.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerFirst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toTopOf="@+id/containerSecond"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/loginHeaderLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ellipse"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerSecond"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/welcome_back"
            android:textColor="@color/colorWhite"
            android:textStyle="normal"
            android:textSize="43sp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:textSize="19sp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintTop_toBottomOf="@id/textWelcome"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_for_input"
            android:hint="@string/email"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            android:paddingStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/textSignIn"/>
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="@drawable/background_for_input"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="13dp"
            android:paddingStart="20dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/background_for_sign_in_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />
        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"/>


        <TextView
            android:id="@+id/textForgot"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:onClick="getForget"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:fontFamily="@font/segoe_ui"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/sign_up_btn"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoe_ui_bold"
            app:layout_constraintBottom_toBottomOf="@id/textForgot"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
            app:layout_constraintWidth_percent="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>