<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerFirst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintBottom_toTopOf="@+id/containerSecond"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerSecond"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerFirst">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite"
            android:textStyle="normal"
            android:textSize="43sp"
            android:fontFamily="@font/segoe_ui_bold"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/textCreate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/create_your_account"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:textSize="19sp"
            android:fontFamily="@font/segoe_ui_italic"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintTop_toBottomOf="@id/textWelcome"/>
        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_for_input"
            android:hint="@string/name"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/textCreate"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_for_input"
            android:hint="@string/email"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputUserName"/>
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:background="@drawable/background_for_input"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="13dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/background_for_sign_in_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />
        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="@id/buttonSignUp"
            app:layout_constraintStart_toStartOf="@id/buttonSignUp"
            app:layout_constraintTop_toTopOf="@+id/buttonSignUp" />

        <TextView
            android:id="@+id/textForgot"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoe_ui"
            android:onClick="getForgetActivity"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@id/buttonSignUp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/sign_up_btn"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoe_ui_bold"
            app:layout_constraintBottom_toBottomOf="@id/textForgot"
            app:layout_constraintEnd_toEndOf="@id/buttonSignUp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
            app:layout_constraintWidth_percent="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>